examples/test/testpolicy4627.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4627
  namespace: namespace89
spec:
  podSelector:
    matchLabels:
      key1: value43
      key17: value34
      key15: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value20
          key15: value39
          key48: value31
      podSelector:
        matchLabels:
          key42: value10
